# opencv-project

faceDetect/: CMakeLists.txt  README  faceDetect.cpp  faceDetect.h  main.cpp  main.h
faceDetect_video/: CMakeLists.txt  faceDetect_video.cpp  faceDetect_video.h  main.cpp  main.h
preventionBurglary/: CMakeLists.txt  main.cpp  main.h  objectDetect.cpp  objectDetect.h  putUrlPic.cpp  putUrlPic.h
test/: CMakeLists.txt  test.cpp
yolo3_objectDetect/: CMakeLists.txt  main.cpp  main.h  objectDetect.cpp  objectDetect.h
